--- a/index3.html
+++ b/index3.html
@@ -21,9 +21,9 @@
                 <p class="subtitulo">O escritório Paula Praxedes também conta com especialistas nas áreas do Direito Previdenciário, Tributário, Trabalhista, Ambiental, Criminal e Digital.</p>
             </div>
             <div class="buttons">
-                <button> Fale Conosco <i class="mdi mdi-whatsapp"></i></button>
-                <button> Missão África <i class="mdi mdi-church"></i></button>
-                <button> Localização <i class="mdi mdi-map-marker"></i></button>
+                <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5562993316516&text=Ol%C3%A1!%20Acabo%20de%20visitar%20o%20seu%20perfil%20no%20Instagram%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20seu%20trabalho.';"> Fale Conosco <i class="mdi mdi-whatsapp"></i></button>
+                <button onclick="window.location.href = 'https://www.missionafrika.org/?fbclid=PAAaaZUn73qAQQOFb1KJecfLN272Wb7995JQxDELaYTHeA1Jlf91reEqDbH3w_aem_Ab9rszumfVjNTnc2SyAlQeqOf-BG79NZEL7cWXZh4IGWfOcrRfs6DR67z-8zQUyfOvg%23h.f3u535divd0t';"> Missão África <i class="mdi mdi-church"></i></button>
+                <button onclick="window.location.href = 'https://www.google.com/maps/dir//-13.6538744,-48.8798103/@-13.6538744,-48.881999,17z?hl=pt-BR';"> Localização <i class="mdi mdi-map-marker"></i></button>
             </div>
 
             <div class="icons">
