--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Landing Page</title>
-        <link rel="stylesheet" type="text/css" href="style.css?v=1">
+        <title>Paula Praxedes | Escritório de Advocacia</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
     </head>
-
 <body>
     <div class="container">
         <header>
@@ -32,7 +31,6 @@
                 <div onclick="window.location.href = 'mailto:contato@paulapraxedes.adv.br';" class="icon-email"><img src="email4.png"></div>
             </div>
             <p class="nomeInsta">Paula Praxedes Advocacia</p>
-
         </div>
         <footer>
             <a href="https://instagram.com/imgabasz" target="_blank">Desenvolvido com ❤️ por Gabriel</a>
