--- a/index.html
+++ b/index.html
@@ -4,36 +4,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Paula Praxedes | Escritório de Advocacia</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css?v=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     </head>
 <body>
     <div class="container">
         <header>
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="img/logo.png" alt="Logo" class="logo">
         </header>
         <div class="content">
-            <img src="paula.jpg" alt="Image" class="main-image">
+            <img src="img/paula.jpg" alt="Image" class="main-image">
             <div class="text">
                 <h2>Especialista em Direito Civil: Família, Sucessões e Consumidor.</h2>
                 <p class="subtitulo">O escritório Paula Praxedes também conta com especialistas nas áreas do Direito Previdenciário, Tributário, Trabalhista, Ambiental, Criminal e Digital.</p>
+                <div class="buttons">
+                    <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5562993316516&text=Ol%C3%A1!%20Acabo%20de%20visitar%20o%20seu%20perfil%20no%20Instagram%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20seu%20trabalho.';"> Fale Conosco <i class="mdi mdi-whatsapp"></i></button>
+                    <button onclick="window.location.href = 'https://www.missionafrika.org/?fbclid=PAAaaZUn73qAQQOFb1KJecfLN272Wb7995JQxDELaYTHeA1Jlf91reEqDbH3w_aem_Ab9rszumfVjNTnc2SyAlQeqOf-BG79NZEL7cWXZh4IGWfOcrRfs6DR67z-8zQUyfOvg%23h.f3u535divd0t';"> Missão África <i class="mdi mdi-church"></i></button>
+                    <button onclick="window.location.href = 'https://www.google.com/maps/dir//-13.6538744,-48.8798103/@-13.6538744,-48.881999,17z?hl=pt-BR';"> Localização <i class="mdi mdi-map-marker"></i></button>
+                </div>
+                <div class="icons">
+                    <div onclick="window.location.href = 'https://www.instagram.com/paulapraxedes.advocacia/';" class="icon-insta"><img src="img/insta2.png"></div>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <div onclick="window.location.href = 'mailto:contato@paulapraxedes.adv.br';" class="icon-email"><img src="img/email4.png"></div>
+                </div>
+                <p class="nomeInsta">Paula Praxedes Advocacia</p>
             </div>
-            <div class="buttons">
-                <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5562993316516&text=Ol%C3%A1!%20Acabo%20de%20visitar%20o%20seu%20perfil%20no%20Instagram%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20seu%20trabalho.';"> Fale Conosco <i class="mdi mdi-whatsapp"></i></button>
-                <button onclick="window.location.href = 'https://www.missionafrika.org/?fbclid=PAAaaZUn73qAQQOFb1KJecfLN272Wb7995JQxDELaYTHeA1Jlf91reEqDbH3w_aem_Ab9rszumfVjNTnc2SyAlQeqOf-BG79NZEL7cWXZh4IGWfOcrRfs6DR67z-8zQUyfOvg%23h.f3u535divd0t';"> Missão África <i class="mdi mdi-church"></i></button>
-                <button onclick="window.location.href = 'https://www.google.com/maps/dir//-13.6538744,-48.8798103/@-13.6538744,-48.881999,17z?hl=pt-BR';"> Localização <i class="mdi mdi-map-marker"></i></button>
-            </div>
-
-            <div class="icons">
-                <div onclick="window.location.href = 'https://www.instagram.com/paulapraxedes.advocacia/';" class="icon-insta"><img src="insta2.png"></div>
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <div onclick="window.location.href = 'mailto:contato@paulapraxedes.adv.br';" class="icon-email"><img src="email4.png"></div>
-            </div>
-            <p class="nomeInsta">Paula Praxedes Advocacia</p>
         </div>
         <footer>
-            <a href="https://instagram.com/imgabasz" target="_blank">Desenvolvido com ❤️ por Gabriel</a>
+            <a href="https://api.whatsapp.com/send?phone=5562994774179&text=Ol%C3%A1!%20Gostaria%20de%20um%20desenvolvimento%20seu." target="_blank">Desenvolvido por Gabriel P.</a>
         </footer>
     </div>
 </body>
