--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <footer>
-            <a href="https://api.whatsapp.com/send?phone=5562994774179&text=Ol%C3%A1!%20Gostaria%20de%20um%20desenvolvimento%20seu." target="_blank">Desenvolvido por Gabriel P.</a>
+            <a href="https://linktr.ee/kleysonlucas" target="_blank">Desenvolvido por Gabriel em parceria com a KM Tecnologia Informática.</a>
         </footer>
     </div>
 </body>
