--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css?v=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     </head>
 <body>
@@ -14,6 +15,8 @@
         <header>
             <img src="img/logo.png" alt="Logo" class="logo">
         </header>
+        <div class="mouse"></div>
+        <p>Para baixo</p>
         <div class="content">
             <img src="img/paula.jpg" alt="Image" class="main-image">
             <div class="text">
