--- a/index.html
+++ b/index.html
@@ -9,6 +9,62 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     </head>
+    <style>
+        /* Inline styles for debugging */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: #bc2649;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .logo {
+            width: 80%;
+            max-width: 200px;
+            height: auto;
+            margin: 0 auto;
+        }
+
+        .content {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .main-image {
+            width: 100%;
+            max-width: 400px;
+            height: auto;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .text {
+            margin-bottom: 20px;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
 <body>
     <div class="container">
         <header>
