--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <div class="buttons">
                     <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5562993316516&text=Ol%C3%A1!%20Acabo%20de%20visitar%20o%20seu%20perfil%20no%20Instagram%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20o%20seu%20trabalho.';"> Fale Conosco <i class="mdi mdi-whatsapp"></i></button>
                     <button onclick="window.location.href = 'https://www.missionafrika.org/?fbclid=PAAaaZUn73qAQQOFb1KJecfLN272Wb7995JQxDELaYTHeA1Jlf91reEqDbH3w_aem_Ab9rszumfVjNTnc2SyAlQeqOf-BG79NZEL7cWXZh4IGWfOcrRfs6DR67z-8zQUyfOvg%23h.f3u535divd0t';"> Missão África <i class="mdi mdi-church"></i></button>
-                    <button onclick="window.location.href = 'https://www.google.com/maps/dir//-13.6538744,-48.8798103/@-13.6538744,-48.881999,17z?hl=pt-BR';"> Localização <i class="mdi mdi-map-marker"></i></button>
+                    <button onclick="window.location.href = 'https://maps.app.goo.gl/s3cNaAYBYaimQRzG8?g_st=iw';"> Localização <i class="mdi mdi-map-marker"></i></button>
                 </div>
                 <div class="icons">
                     <div onclick="window.location.href = 'https://www.instagram.com/paulapraxedes.advocacia/';" class="icon-insta"><img src="img/insta2.png"></div>
